# reference-workload

./: .gitignore  Cargo.toml  README.md  hk8njjoroqdchurdnv0nepv9j6ikmtic  manifest
.agents/decisions/: 2026-07-02-kernel-agent-artifact-split.md  2026-07-16-apu-clock-epoch-cut.md
.agents/handoffs/: m6-scoring-handoff-for-state-scorer.md
.agents/plans/audio-fidelity-and-apu-clock/: 00-overview.md  01-dsp-fidelity-fixes.md  02-apu-clock-debt-fix.md  03-epoch-cut-protocol.md  04-verification.md
.agents/plans/backdrop-color-math/: 00-plan.md
.agents/plans/cgwsel-clip-region/: 00-overview.md  01-implementation.md
.agents/plans/close-m6-entry-gates/: 00-overview.md  01-close-refwork-czi.md  02-operator-launch-decision.md  03-close-refwork-20v.md  04-hand-play-session-and-corpus.md  05-closeout-and-gate-verification.md  EVIDENCE-czi.md  GATE-RECORD-ASK1.md  SESSION-DAY-RUNBOOK.md
.agents/plans/emulator-perf-profiling-first/: 00-overview.md  01-preflight-and-guardrails.md  02-benchmark-harness.md  03-host-measurement-and-attribution.md  04-private-workload-and-guest-calibration.md  05-findings-followups-and-handoff.md  06-verification-matrix.md
.agents/plans/fix-ramdiff-resume-state-loss/: 00-overview.md  01-evidence.md  02-log-safety.md  03-resume-integrity.md  04-replay-verification.md  05-deploy-and-verify.md  06-review-resolutions.md  07-implementation-results.md
.agents/plans/guest-sdk-unblock-reference-workload/: 00-overview.md  01-confirm-m2-floor.md  02-harness-state-machine.md  03-mock-agent-fixtures.md  04-image-handoff-assets.md  05-in-vm-first-room-gate.md  06-full-determinism-suite.md  07-ci-evidence-closeout.md  m2-floor-evidence.md  m4-image-handoff-evidence.md  m4-in-vm-first-room-evidence.md  m5-suite-evidence.md
.agents/plans/hdma-midframe-enable/: 00-overview.md  01-implementation.md
.agents/plans/interactive-sound-and-pad-lr/: 00-overview.md  01-emu-audio-sample-tap.md  02-ramdiff-audio-output.md  03-gamepad-lr-and-mapping.md  04-verification-and-docs.md
.agents/plans/m0-residue/: 00-overview.md  01-featuremap-crate.md  02-protocol-crate.md  03-demo-yaml-and-fixtures.md  04-ci-and-gates.md  05-acceptance-checklist.md
.agents/plans/phase-2/: 00-overview.md  01-apu-spc700-core.md  02-apu-dsp-and-integration.md  03-ppu-raster-effects.md  04-ramdiff.md  05-refwork-verify.md  06-accuracy-bringup-and-feature-map.md  07-ci-and-cross-arch.md  08-review-gate-and-acceptance.md  bringup-log.md
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yaml  nightly.yaml  vm-gates.yaml
crates/m0-proto-client/: Cargo.toml
crates/ramdiff/: Cargo.toml
crates/ramdiff/src/: audio.rs  candidates.rs  emit.rs  filter.rs  gamepad.rs  gamepad_macos.rs  lib.rs  main.rs  record.rs  session.rs
crates/ramdiff/tests/: round_trip.rs
crates/refwork-dh-client/: Cargo.toml
crates/refwork-dh-client/src/: lib.rs  mock.rs
crates/refwork-dh-client/tests/: live_worker_smoke.rs
crates/refwork-emu/: Cargo.toml
crates/refwork-emu-bench/: Cargo.toml
crates/refwork-emu-bench/src/: main.rs
crates/refwork-emu/examples/: rom_diag.rs
crates/refwork-emu/src/: apu.rs  bus.rs  cart.rs  core_impl.rs  dma.rs  fault.rs  joypad.rs  lib.rs  timing.rs
crates/refwork-emu/src/apu/: aram.rs  dsp.rs  ipl.rs  mod.rs  spc700.rs  timers.rs
crates/refwork-emu/src/cpu/: addressing.rs  alu.rs  exec.rs  mod.rs  tests.rs
crates/refwork-emu/src/ppu/: bg.rs  mod.rs  palette.rs  regs.rs  sprite.rs
crates/refwork-featuremap/: Cargo.toml
crates/refwork-featuremap/src/: lib.rs  main.rs
crates/refwork-featuremap/tests/: fixtures.rs
crates/refwork-featuremap/tests/fixtures/invalid/: 01-offset-out-of-bounds.yaml  02-duplicate-name.yaml  03-undeclared-region.yaml  04-bitflags-bad-discretize.yaml  05-bytes-missing-width.yaml  06-width-mismatch.yaml  07-grid-x-not-scalar.yaml  08-grid-room-volatile.yaml  09-grid-double-count.yaml  10-bad-schema-version.yaml  11-valid-when-volatile.yaml  12-scoring-volatile-in-predicate.scoring.yaml  12-scoring-volatile-in-predicate.yaml  13-scoring-bytes-in-predicate.scoring.yaml  13-scoring-bytes-in-predicate.yaml  14-scoring-unknown-feature.scoring.yaml  14-scoring-unknown-feature.yaml  15-scoring-bit-out-of-range.scoring.yaml  15-scoring-bit-out-of-range.yaml  16-scoring-bitop-on-non-bitflags.scoring.yaml  16-scoring-bitop-on-non-bitflags.yaml  expected.json
crates/refwork-harness/: Cargo.toml
crates/refwork-hash/: Cargo.toml
crates/refwork-protocol/: Cargo.toml
crates/refwork-protocol/src/: lib.rs
crates/refwork-script/: Cargo.toml  FORMAT.md
crates/refwork-script/src/: lib.rs
crates/refwork-verify/: Cargo.toml
crates/refwork-verify/src/: decode.rs  double_run.rs  expectations.rs  lib.rs  main.rs  map_check.rs  phase4_artifact_check.rs  phase4_bundle_check.rs  phase4_capture_export.rs  phase4_checksum_manifest.rs  phase4_context_check.rs  phase4_context_export.rs  phase4_fallback_check.rs  phase4_layout.rs  phase4_private_intake.rs  phase4_score_plan.rs  phase4_trace.rs  play.rs  redaction_scan.rs  vm_first_room.rs  vm_suite.rs
crates/refwork-verify/tests/: integration.rs  vm_first_room.rs  vm_suite.rs
docs/: emulator-performance-profile.md
docs/emulator-performance-profile-data/: synthetic-20260711.md  verification-20260711.md
docs/phase4-corpus-guide/: 01-private-intake.html  02-map-layout.html  03-capture-export.html  04-label-score-trace.html  05-validate-handoff.html  index.html  styles.css
feature-maps/: demo-game.yaml
image/: README.md  boot.toml  expected-regions.toml  harness.toml  kernel.config
schema/: feature-map.schema.json
scoring/: demo-game.yaml
tools/: m6-discovery-analyze.sh  m6-discovery-analyze2.sh  m6-gate-check.sh  m6-session-pipeline.sh  record-ramdiff
tools/refwork-emu-perf/: README.md  run-authoritative.sh  run-sampling.sh
xtask/: Cargo.toml
xtask/asm/: synth.s65
xtask/src/: asm.rs  audit_syms.rs  cpu_tests.rs  deny.rs  fetch.rs  hash_chain.rs  image.rs  lib.rs  main.rs  spc_tests.rs  synth_rom.rs
xtask/tests/: deny_selftest.rs  determinism.rs  image_inputs.rs  zero_alloc.rs
(+196 files in other folders)
