[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
determinism-proto = { path = "../control-plane/crates/determinism-proto", default-features = false }
# Hypervisor worker gRPC contract. Path dep on the sibling checkout (the
# same pattern rom-operator-bridge uses) — wire fidelity over a vendored
# proto copy that could drift. CI checks out determinism-hypervisor next to
# this repo, like control-plane above.
dh-proto = { path = "../determinism-hypervisor/crates/dh-proto" }
