[package]
name = "ramdiff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAM-address discovery tool (record/search/candidates/watch/emit)"

[[bin]]
name = "ramdiff"
path = "src/main.rs"

[lib]
name = "ramdiff"
path = "src/lib.rs"

[features]
# Interactive windowed mode — never enabled in CI (no display required).
# `dep:gilrs` only activates on macOS (it is declared as a target-specific
# dependency below); on Linux the feature pulls in minifb alone.
interactive = ["dep:minifb", "dep:gilrs"]

[dependencies]
refwork-emu = { path = "../refwork-emu", features = ["introspect"] }
refwork-script = { path = "../refwork-script" }
refwork-featuremap = { path = "../refwork-featuremap" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
blake3 = "1"

# Interactive-only dependencies (gated by the "interactive" feature).
minifb = { version = "0.25", optional = true }

# macOS has no evdev; gamepad input goes through gilrs (IOKit HID) instead.
[target.'cfg(target_os = "macos")'.dependencies]
gilrs = { version = "0.11", optional = true }

[dev-dependencies]
# Nothing extra: we use the workspace xtask lib via std::process for build-rom
