[package]
name = "refwork-featuremap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "refwork-featuremap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# serde_yaml 0.9.x: upstream is archived, but this is the convention named by the
# spec README "Conventions honored (MAP.md)" section. Accepted; pinned to 0.9 minor.
serde_yaml = "0.9"
serde_json = "1"
# schemars pinned to 0.8 minor for byte-stable schema output (CI drift gate dep).
schemars = "0.8"

[dev-dependencies]
serde_json = "1"
